--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,10 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+  #阿里云oss配置信息
+  alioss:
+    endpoint: ${sky.alioss.endpoint}
+    accessKeyId: ${sky.alioss.accessKeyId}
+    accessKeySecret: ${sky.alioss.accessKeySecret}
+    bucketName: ${sky.alioss.bucketName}
